Add id field in CukeTestRun Refactor some code